# cmd/docs/swagger.yaml
@@ -25,6 +25,22 @@ definitions:
       paginate:
         $ref: '#/definitions/listoption.Paginate'
     type: object
+  erp.ListPlanReq:
+    properties:
+      is_export:
+        type: boolean
+      list_option:
+        $ref: '#/definitions/listoption.ListOption'
+    type: object
+  erp.ListPlanRsp:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/erp.ModelPlan'
+        type: array
+      paginate:
+        $ref: '#/definitions/listoption.Paginate'
+    type: object
   erp.ModelAccount:
     properties:
       created_at:
@@ -44,6 +60,65 @@ definitions:
         type: string
       updated_at:
         description: '@gorm: comment:''更新时间'''
+        type: integer
+    type: object
+  erp.ModelPlan:
+    properties:
+      att_name:
+        description: '@gorm: type:varchar(128);not null;comment:''附件名'''
+        type: string
+      attachment:
+        description: '@gorm: type:varchar(128);not null;comment:''附件'''
+        type: string
+      balance_money:
+        description: '@gorm: comment:''剩余金额，单位分'''
+        type: integer
+      comment:
+        description: '@gorm: type:varchar(64);not null;comment:''备注'''
+        type: string
+      created_at:
+        description: '@gorm: comment:''创建时间'''
+        type: integer
+      customer:
+        description: '@gorm: comment:客户名称'
+        type: string
+      deleted_at:
+        description: '@gorm: comment:''删除时间'''
+        type: integer
+      id:
+        description: '@gorm: primarykey'
+        type: integer
+      mark:
+        description: '@gorm: type:varchar(64);not null;comment:''摘要'''
+        type: string
+      plan_at:
+        description: '@gorm: comment:''日期'''
+        type: integer
+      status:
+        description: |-
+          Status
+          @gorm: type:tinyint(1);default:0;comment:状态
+        type: integer
+      total_money:
+        description: '@gorm: comment:''总金额，单位分'''
+        type: integer
+      trade_money:
+        description: '@gorm: comment:''已付/已收金额，单位分'''
+        type: integer
+      type:
+        description: Type
+        type: integer
+      updated_at:
+        description: '@gorm: comment:''更新时间'''
+        type: integer
+      user_id:
+        description: '@gorm: comment:''创建用户'''
+        type: integer
+      uuid:
+        description: '@gorm: uniqueIndex:uniq_uuid;type:varchar(32);comment:''唯一ID'''
+        type: string
+      version:
+        description: '@gorm: type:int(10);default:0;comment:版本号'
         type: integer
     type: object
   erp.ModelPlanDetail:
@@ -170,13 +245,35 @@ paths:
       summary: 创建明细
       tags:
       - 应收应付
+  /erp/ListPlan:
+    post:
+      consumes:
+      - application/json
+      description: 应收应付列表
+      parameters:
+      - description: options:[{type:1,value:'1'(1应付，2应收))},{type:2,value:'客户名称'},{type:3,value:'摘要'},{type:4,value:'1694957121,1694957127'}]
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/erp.ListPlanReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/erp.ListPlanRsp'
+      summary: 应收应付列表
+      tags:
+      - 应收应付
   /erp/ListPlanDetail:
     post:
       consumes:
       - application/json
       description: 明细列表
       parameters:
-      - description: 'options: [{type:1,value:plan_id)}]'
+      - description: 'options: [{type:1,value:''plan_id'')}]'
         in: body
         name: request
         required: true
